--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse,maven
 
 ### Eclipse ###
+build/
 .metadata
 bin/
 tmp/
